--- a/contacta.html
+++ b/contacta.html
@@ -9,25 +9,81 @@
   <title>Pàgina de Pau</title>
 </head>
 <body>
+
+<header class="fixed inset-x-0 top-0 z-50" x-data="{menuOpen: false}">
+  <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+    <div class="flex lg:flex-1">
+      <a href="#" class="-m-1.5 p-1.5">
+        <span class="sr-only">Your Company</span>
+        <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+      </a>
+    </div>
+    <div class="flex lg:hidden">
+      <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700" @click="menuOpen=true">
+        <span class="sr-only">Open main menu</span>
+        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+      </button>
+    </div>
+    <div class="hidden lg:flex lg:gap-x-12">
+      <a href="index.html" class="text-sm font-semibold leading-6 text-purple-800">Curiositats</a>
+      <a href="contacta.html" class="text-sm font-semibold leading-6 text-purple-800">Contacta'm</a>
+    </div>
+    <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+      <a class="text-sm font-semibold leading-6 text-gray-900"><span aria-hidden="true"></span></a>
+    </div>
+  </nav>
+  <!-- Mobile menu, show/hide based on menu open state. -->
+  <div class="lg:hidden" role="dialog" aria-modal="true" x-show="menuOpen">
+    <!-- Background backdrop, show/hide based on slide-over state. -->
+    <div class="fixed inset-0 z-50"></div>
+    <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+      <div class="flex items-center justify-between">
+        <a href="#" class="-m-1.5 p-1.5">
+          <span class="sr-only">Your Company</span>
+          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+        </a>
+        <button type="button" @click="menuOpen=false" class="-m-2.5 rounded-md p-2.5 text-gray-700">
+          <span class="sr-only">Close menu</span>
+          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </button>
+      </div>
+      <div class="mt-6 flow-root">
+        <div class="-my-6 divide-y divide-gray-500/10">
+          <div class="space-y-2 py-6">
+            <a href="index.html" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Curiositats</a>
+            <a href="contacta.html" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Contacta'm</a>
+          </div>
+          <div class="py-6">
+            <a class="-mx-3 block rounded-lg px-6 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 <div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
   <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
     <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
   </div>
   <div class="mx-auto max-w-2xl text-center">
-    <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact sales</h2>
-    <p class="mt-2 text-lg leading-8 text-gray-600">Aute magna irure deserunt veniam aliqua magna enim voluptate.</p>
+    <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contacta'm</h2>
+    <p class="mt-2 text-lg leading-8 text-gray-600">Si vols posarte en contacte amb mi, plena aquest formulari.</p>
   </div>
   <form id="contact">
     <div class="sm:col-span-2">
-      <label for="first_name" class="block text-sm font-semibold leading-6 text-gray-900">First Name</label>
+      <label for="first_name" class="block text-sm font-semibold leading-6 text-gray-900">Nom</label>
       <input type="text" id="first_name" name="first_name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
     </div>
     <div class="sm:col-span-2">
-      <label for="last_name" class="block text-sm font-semibold leading-6 text-gray-900">Last Name</label>
+      <label for="last_name" class="block text-sm font-semibold leading-6 text-gray-900">Cognoms</label>
       <input type="text" id="last_name" name="last_name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
     </div>
     <div class="sm:col-span-2">
-      <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Company</label>
+      <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Companyia</label>
       <input type="text" id="company" name="company" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
     </div>
     <div class="sm:col-span-2">
@@ -35,15 +91,15 @@
       <input type="email" id="email" name="email" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
     </div>
     <div class="sm:col-span-2">
-      <label for="phone_number" class="block text-sm font-semibold leading-6 text-gray-900">Phone Number</label>
+      <label for="phone_number" class="block text-sm font-semibold leading-6 text-gray-900">Telèfon</label>
       <input type="tel" id="phone_number" name="phone_number" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
     </div>
     <div class="sm:col-span-2">
-      <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Message</label>
+      <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Missatge</label>
       <textarea id="message" name="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" required></textarea>
     </div>
     <div class="sm:col-span-2">
-      <button id="form-button" type="submit" class="mt-10 block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Submit</button>
+      <button id="form-button" type="submit" class="button-submit mt-10 block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Submit</button>
     </div>
   </form>
 
@@ -59,6 +115,8 @@
       emailjs.sendForm('service_uu8xekq', 'template_hcvyu63', this)
               .then(function() {
                 alert('Mensaje enviado correctamente!');
+                // Limpiar los campos del formulario
+                document.getElementById('contact').reset();
               }, function(error) {
                 alert('Error al enviar el mensaje: ' + JSON.stringify(error));
               });
