--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
-          <a href="#" class="text-sm font-semibold leading-6 text-purple-800">Curiositats</a>
+          <a href="index.html" class="text-sm font-semibold leading-6 text-purple-800">Curiositats</a>
           <a href="contacta.html" class="text-sm font-semibold leading-6 text-purple-800">Contacta'm</a>
-          <a href="#" class="text-sm font-semibold leading-6 text-purple-800">Habilitats</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
           <a class="text-sm font-semibold leading-6 text-gray-900"><span aria-hidden="true"></span></a>
@@ -61,9 +60,8 @@
           <div class="mt-6 flow-root">
             <div class="-my-6 divide-y divide-gray-500/10">
               <div class="space-y-2 py-6">
-                <a href="#" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Curiositats</a>
-                <a href="#" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Contacta'm</a>
-                <a href="#" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Habilitats</a>
+                <a href="index.html" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Curiositats</a>
+                <a href="contacta.html" class="-mx-3 block rounded-lg px-6 py-2 text-base font-semibold leading-7 text-purple-600 hover:bg-gray-50">Contacta'm</a>
               </div>
               <div class="py-6">
                 <a class="-mx-3 block rounded-lg px-6 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"></a>
